# robust-leader-follower-coordination-

./: README.md
LTL_mas_navigation/: CMakeLists.txt  package.xml
LTL_mas_navigation/launch/: mav_hovering_example_MAS.launch
LTL_mas_navigation/nodes/: adaptation_laws.eps  betas.eps  firefly_1_d_hat.bag  firefly_1_f_hat.bag  firefly_1_inputs.bag  firefly_1_pos.bag  firefly_1_theta_hat.bag  firefly_2_d_hat.bag  firefly_2_f_hat.bag  firefly_2_inputs.bag  firefly_2_pos.bag  firefly_2_theta_hat.bag  firefly_3_d_hat.bag  firefly_3_f_hat.bag  firefly_3_inputs.bag  firefly_3_pos.bag  firefly_3_theta_hat.bag  firefly_4_d_hat.bag  firefly_4_f_hat.bag  firefly_4_inputs.bag  firefly_4_pos.bag  firefly_4_theta_hat.bag  firefly_5_d_hat.bag  firefly_5_f_hat.bag  firefly_5_inputs.bag  firefly_5_pos.bag  firefly_5_theta_hat.bag  firefly_6_d_hat.bag  firefly_6_f_hat.bag  firefly_6_inputs.bag  firefly_6_pos.bag  firefly_6_theta_hat.bag  firefly_leader_error.bag  navigation_adapt.py  navigation_adapt_integrator.py  navigation_node.py  plot_stuff.py  test.bag  time.bag
